2020_02_13
* altered 'gd' so it always uses 'superpose=TRUE' as default. Use 'gd_' to get superpose=FALSE
2020_01_02
* added getD to get data frame from a model and optionally add rows (made possible by getModelData by J. Fox)
2019_12_09
* rename 'gspline' 'Gspline' to avert conflicts with package 'gspline'
* version 0.2.1
2019_12_08
* development version 0.2.0.9000
* released version 0.2.0
* added make.grid to generate cartesian product of predictor to help plot fitted responses
* added getModelData (from gspline)
* added copy of pipe (from magrittr)
2019_10_25
* added panel.barchart2 to allow varying heights/widths of bars in a barchart using lattice 
2019_07_09
* added llapply to provide list names and items to function argument in lapply
# spida2 version 0.2.1 2019_07_09
2019-04-17
* modified print.wald to handle repeated row names
2019-03-21
* added gspline, a new approach to gsp (in progress)
* modified sortdf so 'form' can be a variable or list, not just a formula
2018-11-21
* added freq argument to 'up' to summarize factor using frequencies. Useful to create data grouped by predictor variables with frequencies for levels of response variable for binomial glm with goodness of fit test 
2018-10-13
* added brace
2018-04-12
* added verbose argument to Rbind
2018-03-18
* getX returns a row of NAs if a variable in data is NA
2018-03-05
* Fixed a bug in 'towide'
2018-02-23
* The 'form' argument in 'sortdf' does not have to be a formula 
2017-12-28
* Added yscale.components.log100real to draw real labels on right side for logged variable
2017-12-20
* Added here: get current directory of R script in R Studio
2017-11-19
* Added panel.errorbars
2017-07-10
* Added getFix.stanfit and modified wald to pass 'pars' parameter
2017-06-30
* Added name, sub_, gsub_, getex, getex_
2017-05-12
* sortdf:  fixed so single variable data frame remains a data frame
2017-05-12
* capply.default rewritten to speed up when by is a list
2017-05-05